<resources>
    <string name="app_name">Prototipo-AppBancario-PedroELucas</string>
    <string name="txt_nome_usuario">Olá, usuário</string>
    <string name="txt_saldo_conta">Conta \n\n R$ 1000,00</string>
    <string name="sucesso">Sucesso</string>
    <string name="Cadastrosucesso">Cadastro realizado com sucesso.</string>
    <string name="ok">OK</string>
    <string name="erro">Erro!!</string>
    <string name="successo">Successo!</string>
    <string name="Entendi">Entendi</string>
    <string name="ErroCadastro">Não foi possível realizar o cadastro, verifique a data informada.</string>
    <string name="title_activity_usuario_logado">usuario_logado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Inicio">Inicio</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="atualizar_meus_dados">Atualizar Meus Dados</string>
    <string name="abertura_de_conta">Abertura de Conta</string>
    <string name="conta_aberta_com_seucesso">Conta aberta com sucesso!</string>
    <string name="n_o_foi_poss_vel_abrir_sua_conta_verifique_a_data_informada">Não foi possível abrir sua conta, verifique a data informada.</string>
    <string name="impossibilidade">Impossibilidade</string>
    <string name="no_momento_n_o_foi_poss_vel_abrir_sua_conta_por_favor_verifique_os_dados_informados">No momento não foi possível abrir sua conta. Por favor verifique os dados informados.</string>
    <string name="deposito">Depósito</string>
    <string name="depositar">Depositar</string>
    <string name="valor">Valor</string>
    <string name="saque">Saque</string>
    <string name="sacar">Sacar</string>
    <string name="valorIncorreto">Valor incorreto!</string>
    <string name="erroValor">Por favor verifique o valor informado.</string>
    <string name="depositoSucesso">Depósito realizado\ncom sucesso!</string>
    <string name="impossiblidadeDeposito">No momento não foi possível realizar o depósito. Tente novamente mais tarde.</string>
    <string name="semSaldo">Saldo insuficiente!</string>
    <string name="semSaldoConta">Você não possui saldo suficente na sua conta para o valor informado.</string>
    <string name="saqueSucesso">Saque realizado\ncom sucesso!</string>
    <string name="impossiblidadeSaque">No momento não foi possível realizar o saque. Tente novamente mais tarde.</string>
    <string name="item_label">Conta</string>
    <string name="transferencia">Transferência</string>
    <string name="transferir">Transferir</string>
    <string name="impossiblidadeTransferencia">No momento não foi possível realizar a transferência. Tente novamente mais tarde.</string>
    <string name="transferenciaSucesso">Transferência realizada\ncom sucesso!</string>
    <string name="atualizar">Atualizar</string>
    <string name="atualizarDadosCliente">Atualização</string>
    <string name="nome">Nome</string>
    <string name="dataNascimento">Data de nascimento</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="erroData">Não foi possível atualizar seus dados, verifique a data informada.</string>
    <string name="usuarioExistente">Usuário existente!</string>
    <string name="textoUsuarioExistente">O usuário informado já\nse encontra cadastrado.</string>
    <string name="atualizacaoUsuario">No momento não foi possível atualizar os dados. Por favor verifique os dados informados e tente novamente mais tarde.</string>
    <string name="usuarioAtualizadoSucesso">Dados atualizados com sucesso!</string>
    <string name="erroDataAtualizacao">Não foi possível atualizar sua data de nascimento, por favor verifique a data informada.</string>
    <string name="movimentacoes">Minhas movimentações</string>
    <string name="cone_de_refer_ncia">Ícone de referência</string>
    <string name="transferencias">Minhas transferências</string>
    <string name="mensagemValidacaoCamposVazios">Por favor, preencha todos os campos.</string>
    <string name="mensagemLoginInvalido">Não foi possível fazer o login, \npor favor verifique os dados informados.</string>
    <string name="mensagemEntradaESelecaoVazia">Por favor, selecione e preencha\ntodos os campos.</string>
    <string name="mensagemSemMovimentacoes">Você ainda não realizou \nnenhuma movimentação.</string>
    <string name="mensagemSemTransferencia">Você ainda não fez ou recebeu\nnenhuma transferencia.</string>
</resources>