<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <View
        android:id="@+id/ContainerTransferencia"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/container_abertura_conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitleTransferencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/transferencia"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ContainerTransferencia"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/ContainerTransferencia"
        app:layout_constraintTop_toTopOf="@id/ContainerTransferencia" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/materialTextFieldTransferencia"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:endIconTint="@color/green"
        app:endIconDrawable="@drawable/custom_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:boxBackgroundColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="@id/ContainerTransferencia"
        app:layout_constraintStart_toStartOf="@id/ContainerTransferencia"
        app:layout_constraintTop_toBottomOf="@id/txtTitleTransferencia">

        <AutoCompleteTextView
            android:id="@+id/autoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_label"
            android:popupBackground="@color/yellow"
            android:inputType="none"
            android:textColor="@color/black"
            app:boxBackgroundMode="none"
            android:textColorHint="@color/black" />  
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/materialTextFieldTransferenciaValor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="221dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/valor"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/ContainerTransferencia"
        app:layout_constraintStart_toStartOf="@id/ContainerTransferencia"
        app:layout_constraintTop_toBottomOf="@id/materialTextFieldTransferencia"
        app:startIconDrawable="@drawable/negativo"
        app:startIconTint="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldValorTransferencia"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginBottom="4dp"
            android:background="@null"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@drawable/cursor_alterado"
            app:hintTextColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botaoFazerTransferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:text="@string/transferir"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/ContainerTransferencia"
        app:layout_constraintEnd_toEndOf="@id/ContainerTransferencia"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="@id/ContainerTransferencia" />

    <TextView
        android:id="@+id/botaoVoltarTransferencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/materialTextFieldTransferencia"
        app:layout_constraintEnd_toStartOf="@+id/txtTitleTransferencia"
        app:layout_constraintStart_toStartOf="@+id/ContainerTransferencia"
        app:layout_constraintTop_toTopOf="@+id/ContainerTransferencia"/>

</androidx.constraintlayout.widget.ConstraintLayout>

<!--
   app:endIconMode="custom"
        app:endIconTint="@color/green"
        app:endIconDrawable="@drawable/custom_icon"
-->
