<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <View
        android:id="@+id/ContainerSaque"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/container_abertura_conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitleSaque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/saque"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ContainerSaque"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/ContainerSaque"
        app:layout_constraintTop_toTopOf="@id/ContainerSaque" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/materialTextFieldSaque"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="221dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/valor"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/ContainerSaque"
        app:layout_constraintStart_toStartOf="@id/ContainerSaque"
        app:layout_constraintTop_toBottomOf="@id/txtTitleSaque"
        app:startIconDrawable="@drawable/negativo"
        app:startIconTint="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldValorSaque"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginBottom="4dp"
            android:background="@null"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@drawable/cursor_alterado"
            app:hintTextColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/botaoFazerSaque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:text="@string/sacar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@id/ContainerSaque"
        app:layout_constraintEnd_toEndOf="@id/ContainerSaque"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="@id/ContainerSaque" />

    <TextView
        android:id="@+id/botaoVoltarSaque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/materialTextFieldSaque"
        app:layout_constraintEnd_toStartOf="@+id/txtTitleSaque"
        app:layout_constraintStart_toStartOf="@+id/ContainerSaque"
        app:layout_constraintTop_toTopOf="@+id/ContainerSaque" />
</androidx.constraintlayout.widget.ConstraintLayout>


    <!--

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/materialTextFieldDeposito"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/valor"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@id/ContainerDeposito"
            app:layout_constraintStart_toStartOf="@id/ContainerDeposito"
            app:layout_constraintTop_toBottomOf="@id/txtTitleDeposito"
            app:startIconTint="@color/green"
            app:startIconDrawable="@drawable/positivo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldValorDeposito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@null"
                app:hintTextColor="@color/black"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>



    -->
